--- a/style.css
+++ b/style.css
@@ -31,13 +31,21 @@ todo-list {
   display: block;
   font-family: "Poppins", sans-serif;
   padding: 20px 20px 20px 20px;
+  
 }
+
+todo-list:hover{
+   transition-timing-function: ease-out;
+  transition: 0.8s;
+  transform: translateY(-20%);
+}
+
+
 
 svg {
   width: 20px;
   height: 20px;
   fill: #b5ea81;
-  
 }
 .fill {
   color: #b5ea81;
@@ -84,6 +92,12 @@ load-to {
   height: 15px;
   width: 410px;
   margin-left: 10px;
+  
+}
+
+@keyframes example {
+  from {background-color: #fff;}
+  to {background-color: #b9b9fb}
 }
 
 .load {
@@ -96,6 +110,9 @@ load-to {
   background-color: #b9b9fb;
   z-index: 1;
   top: 203px;
+  
+  animation-name: example;
+  animation-duration: 4s;
 }
 
 percent-age {
@@ -119,59 +136,80 @@ para-graph {
   margin-left: 10px;
   font-size: 15px;
 }
-.tab{
-    display: flex;
-    margin-left: 40px;
-    gap: 40px;
+.tab {
+  display: flex;
+  margin-left: 40px;
+  gap: 40px;
+}
+click-tab:hover{
+   transition-timing-function: ease-out;
+  transition: 0.8s;
+  transform: translateY(-20%);
+}
+click-tab2:hover{
+   transition-timing-function: ease-out;
+  transition: 0.8s;
+  transform: translateY(-20%);
+}
+click-tab3:hover{
+   transition-timing-function: ease-out;
+  transition: 0.8s;
+  transform: translateY(20%);
+}
+click-tab4:hover{
+   transition-timing-function: ease-out;
+  transition: 0.8s;
+  transform: translateY(20%);
 }
 
-click-tab{
-    border-radius: 40px;
-    background-color: #f5ed84;
-    text-align: center;
-    font-size: 20px;
-    color: gray;
-    font-family:"Poppins", sans-serif ;
-    padding: 10px 10px 10px 10px;
-    width: 150px;
+click-tab {
+  border-radius: 40px;
+  background-color: #f5ed84;
+  text-align: center;
+  font-size: 20px;
+  color: gray;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 10px 10px 10px;
+  width: 150px;
+  
 }
 
-click-tab2{
-    border-radius: 40px;
-    background-color: #b5ea81;
-    text-align: center;
-    font-size: 20px;
-    color: gray;
-    font-family:"Poppins", sans-serif ;
-    padding: 10px 10px 10px 10px;
-    width: 150px;
+click-tab2 {
+  border-radius: 40px;
+  background-color: #b5ea81;
+  text-align: center;
+  font-size: 20px;
+  color: gray;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 10px 10px 10px;
+  width: 150px;
 }
 
-.tab2{
-    display: flex;
-    margin-left: 40px;
-    gap: 40px;
-    margin-top: 10px;
+.tab2 {
+  display: flex;
+  margin-left: 40px;
+  gap: 40px;
+  margin-top: 10px;
 }
 
-click-tab3{
-    border-radius: 40px;
-    background-color: #f8aaaa;
-    text-align: center;
-    font-size: 20px;
-    color: gray;
-    font-family:"Poppins", sans-serif ;
-    padding: 10px 10px 10px 10px;
-    width: 150px;
+click-tab3 {
+  border-radius: 40px;
+  background-color: #f8aaaa;
+  text-align: center;
+  font-size: 20px;
+  color: gray;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 10px 10px 10px;
+  width: 150px;
 }
 
-click-tab4{
-    border-radius: 40px;
-    background-color: #b3b3ef;
-    text-align: center;
-    font-size: 20px;
-    color: gray;
-    font-family:"Poppins", sans-serif ;
-    padding: 10px 10px 10px 10px;
-    width: 150px;
+click-tab4 {
+  border-radius: 40px;
+  background-color: #b3b3ef;
+  text-align: center;
+  font-size: 20px;
+  color: gray;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 10px 10px 10px;
+  width: 150px;
 }
